smartmove header css added

--- a/css/sass/stylesheets/abstracts/_variables.scss
+++ b/css/sass/stylesheets/abstracts/_variables.scss
@@ -46,7 +46,11 @@ $mid-grey: rgb(153, 153, 153) !default;
 $dark-grey: rgb(68, 68, 68) !default;
 
 
-
+// Background
+$background2					: #f6f9e9;
+$secondary						: #ededed;
+// New Branding Background
+$background1					: #ededed;
 
 
 /// Container's maximum width
