--- a/css/sass/stylesheets/base/_base.scss
+++ b/css/sass/stylesheets/base/_base.scss
@@ -7,11 +7,63 @@
  */
 html {
   box-sizing: border-box;
-      height: 100%;
+    width: 100%;
+    height: 100%;
+
 }
 body {
     font-family: $text-font-stack;
+    background-color: #ededed;
+    width: 100%;
+    height: 100%;
 
+}
+
+
+.mini-nav  {
+display:none;
+  .navbar { 
+
+    @media (min-width: 767px) {
+    position: relative;
+    padding: .5rem 1rem;
+    }
+  }
+}
+
+.iw_component {
+  display: block;
+  float: none;
+
+}
+
+@include breakpoint(large_mobile) {
+.sticky-menu-active #c1400197297169 {
+  display:inline;
+}
+}
+
+@include breakpoint(narrow) {
+  #element1 {
+    overflow: hidden;
+  }
+
+  .container {
+    width: auto;
+  }
+} 
+.primary,
+.secondary {
+  @include box-shadow(0 0 4px rgba(50,50,50,.25));
+  margin: 0 auto;
+  padding: 0;
+}
+
+.primary {
+  background: $white;
+}
+.secondary {
+  background: $secondary;
 }
 /**
  * Make all elements from the DOM inherit from the parent box-sizing
@@ -46,153 +98,51 @@ img {
   // width:100%;
   height:auto;
 }
-form.gsc-search-box { 
-  input.gsc-input {
-    border-radius: 5px;
-    padding:20px;
-    font-family: inherit;
-    border: 1px solid #BBB;
-    padding: 9px;
-    width: 99%;
-    font-size: 26px;
-    text-align: center;
-    padding-right:0;
-}
-table.gsc-search-box td.gsc-input {
-      padding-right: 0;
-}
-input.gsc-search-button {
-    margin-left: -80px;
-    font-family: inherit;
-    /* font-size: 11px; */
-    color: #fff;
-    font-weight: bold;
-    padding: 0 8px;
-    height: 46px;
-    min-width: 44px;
-    // background-color: transparent!important;
-    border: 1px solid #fff;
-    color: #000;
-    background: url("../../img/search-icon.png") no-repeat 9px 6px;
-    text-indent: -80px;
-    /* -webkit-border-radius: 2px; */
-    background-size: 30px;
-    color:#fff;
 
-    /* -webkit-border-radius: 2px; */
-
+.dropdown ul {
+  font-size:12px;
 }
-div.gsc-clear-button {
-  display: none;
-}
-}
- 
-div#searchResults.gcse-results-wrapper { 
-  .gs-title {
-  text-align: left;
-}
-}
+ul {
+  font-size: 14px;
+  line-height: 20px;
+  &.list {
 
+    li {
+      margin-bottom: 13px;
+    }
 
+    i {
+      color: #ccc;
+      margin-right: 5px;
+    }
 
-.carousel-caption {
-  padding-bottom:80px;
+    &.pull-left {
 
-  h1 {
-    position: absolute;
-    bottom: 290px;
-    // font-size: 38px;
-    width: 100%;
-    text-align:center;
+      li {
+        text-align: left;
+      }
+    }
   }
-}
-  ul.feature-links {
-    list-style: none;
-    text-align: left;
-    font-size: 24px;
-    line-height: 60px;
- } 
 
-.gal-row {
-	margin-top:20px;
-}
-.gal-item {
-	margin-bottom:20px;
-  p {
-    font-family:$IntroSemiBold;
+  &.tall {
+    margin-bottom: 20px;
   }
-	.yellow-bg {
-		color:#000; 
-		display: table;
-    	min-height: 100%;
-		width: 	100%;
-		font-weight:600;
 
-		> div {
-			   display: table-cell;
-			   vertical-align: middle;
-			   padding:10px;
-		}
-	}
-}
+  &.taller {
+    margin-bottom: 40px;
+  }
 
-a.gal-img-link  { 
-	overflow:hidden;
-	width: 100%;
-    height: 100%;
-    display: inline-block;
-	span.play-icon {
-	  position:absolute;
-	  left: 0;
-	  top: 0;
-	  right: 0;
-	  filter:alpha(opacity=50);
-	  -moz-opacity:0.5;
-	  -khtml-opacity: 0.5;
-	  opacity: 0.5;
-	  transition: opacity 0.5s;
-	  -webkit-transition: opacity .25s ease-in-out;
-  	  height:100%;
-	  img {
-	  	top:20px;
-	  	position:relative;
-	  }
-}
-img.gal-img {
-	  opacity: 0.5;
-}
-}
+  &.icon-ul {
+    list-style-type: none;
+    margin-left: 1.7em;
+    padding-left: 0;
 
-a.gal-img-link:hover {   
- span.play-icon {
-	opacity: 1;
-}
-img.gal-img {
-opacity: 0.8;
-}
-}
-.yellow-bg {
-background-color:#fcd800;
-max-height:100%;
-}
-
-
-div.support-icon {
-text-align:center;
-a {
-  font-family:"introSemiBold";
-      overflow-wrap: break-word;
- }
-a.ico-link:hover {
-  text-decoration: none;
-}
- i {
- 	font-size:128px;
- 	color:#000;
-  display:block;
-  max-height: 90px;
-  line-height:0;
-
-}
-
+    a.icon-li {
+      left: -2.142857142857143em;
+      position: absolute;
+      text-align: center;
+      top: 0.14285714285714285em;
+      width: 2.142857142857143em;
+    }
+  }
 }
