--- a/css/sass/stylesheets/pages/_home.scss
+++ b/css/sass/stylesheets/pages/_home.scss
@@ -1,3 +1,156 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
+form.gsc-search-box { 
+  input.gsc-input {
+    border-radius: 5px;
+    padding:20px;
+    font-family: inherit;
+    border: 1px solid #BBB;
+    padding: 9px;
+    width: 99%;
+    font-size: 26px;
+    text-align: center;
+    padding-right:0;
+}
+table.gsc-search-box td.gsc-input {
+      padding-right: 0;
+}
+input.gsc-search-button {
+    margin-left: -80px;
+    font-family: inherit;
+    /* font-size: 11px; */
+    color: #fff;
+    font-weight: bold;
+    padding: 0 8px;
+    height: 46px;
+    min-width: 44px;
+    // background-color: transparent!important;
+    border: 1px solid #fff;
+    color: #000;
+    background: url("../../img/search-icon.png") no-repeat 9px 6px;
+    text-indent: -80px;
+    /* -webkit-border-radius: 2px; */
+    background-size: 30px;
+    color:#fff;
+
+    /* -webkit-border-radius: 2px; */
+
+}
+div.gsc-clear-button {
+  display: none;
+}
+}
+ 
+div#searchResults.gcse-results-wrapper { 
+  .gs-title {
+  text-align: left;
+}
+}
+
+
+
+.carousel-caption {
+  padding-bottom:120px;
+
+    right:15%;
+  left:15%;
+
+  h1 {
+    position: absolute;
+    bottom: 290px;
+    // font-size: 38px;
+    width: 100%;
+    text-align:center;
+  }
+}
+  ul.feature-links {
+    list-style: none;
+    text-align: left;
+    font-size: 24px;
+    line-height: 60px;
+ } 
+
+.gal-row {
+	margin-top:20px;
+}
+.gal-item {
+	margin-bottom:20px;
+  p {
+    font-family:$IntroSemiBold;
+  }
+	.yellow-bg {
+		color:#000; 
+		display: table;
+    	min-height: 100%;
+		width: 	100%;
+		font-weight:600;
+
+		> div {
+			   display: table-cell;
+			   vertical-align: middle;
+			   padding:10px;
+		}
+	}
+}
+
+a.gal-img-link  { 
+	overflow:hidden;
+	width: 100%;
+    height: 100%;
+    display: inline-block;
+	span.play-icon {
+	  position:absolute;
+	  left: 0;
+	  top: 0;
+	  right: 0;
+	  filter:alpha(opacity=50);
+	  -moz-opacity:0.5;
+	  -khtml-opacity: 0.5;
+	  opacity: 0.5;
+	  transition: opacity 0.5s;
+	  -webkit-transition: opacity .25s ease-in-out;
+  	  height:100%;
+	  img {
+	  	top:20px;
+	  	position:relative;
+	  }
+}
+img.gal-img {
+	  opacity: 0.5;
+}
+}
+
+a.gal-img-link:hover {   
+ span.play-icon {
+	opacity: 1;
+}
+img.gal-img {
+opacity: 0.8;
+}
+}
+.yellow-bg {
+background-color:#fcd800;
+max-height:100%;
+}
+
+
+div.support-icon {
+text-align:center;
+a {
+  font-family:"introSemiBold";
+      overflow-wrap: break-word;
+ }
+a.ico-link:hover {
+  text-decoration: none;
+}
+ i {
+ 	font-size:128px;
+ 	color:#000;
+  display:block;
+  max-height: 90px;
+  line-height:0;
+
+}
+
+}
