--- a/css/sass/stylesheets/themes/_default.scss
+++ b/css/sass/stylesheets/themes/_default.scss
@@ -8,18 +8,16 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 
-body {
-    width: 100%;
-    height: 100%;
 
+
+.container  {
+background:#fff;
 }
-
-html {
-    width: 100%;
-    height: 100%;
-
+.navbar {
+    .container {
+        background:transparent;
+    }
 }
-
 
 h2 {
         text-align: center;
@@ -60,7 +58,7 @@ of those sections to manage the look and feel of the site. */
 
     padding-top:0px;
     text-align: center;
-    background: #fff;
+    // background: #fff;
 }
 
 
@@ -69,10 +67,11 @@ of those sections to manage the look and feel of the site. */
         text-align: left;
     }
     height: auto;
-    padding-top:90px;
     text-align: center;
-    background: #fff;
+    // background: #fff;
+    .container {
     border-bottom:2px solid;
+    }
     border-color:$dark-grey;
     img.secondary-img {
       margin-top: -110px; 
@@ -84,9 +83,9 @@ of those sections to manage the look and feel of the site. */
 }
 
 .categories-section {
-    padding-top: 20px;
+    // padding-top: 20px;
     text-align: center;
-    background: #fff;
+    // background: #fff;
     .cat-icon-row {
         padding:0 120px;
     }
@@ -110,15 +109,17 @@ of those sections to manage the look and feel of the site. */
         margin-top:20px;
     }
     color:#fff;
-    padding-top: 20px;
-     padding-bottom: 60px;
     text-align: center;
+    .container {
+    padding-top:20px;
     background: #343434;
+    }
 }
 
 .support-section {
-    background-color:#fff;
-    padding-top: 20px;
+    .container {    
+        background-color:#fff;
+        padding-top: 20px;
      padding-bottom: 60px;
-     
+   }  
 }
