prettify the search results section

--- a/css/sass/stylesheets/abstracts/_variables.scss
+++ b/css/sass/stylesheets/abstracts/_variables.scss
@@ -45,6 +45,7 @@ $mid-grey: rgb(153, 153, 153) !default;
 /// @type Color
 $dark-grey: rgb(68, 68, 68) !default;
 
+$text-blue: #00a6ca !default;
 
 // Background
 $background2					: #f6f9e9;
