--- a/css/sass/stylesheets/main.scss
+++ b/css/sass/stylesheets/main.scss
@@ -32,7 +32,8 @@
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/search';
 
 // 6. Page-specific styles
 @import
