--- a/css/sass/stylesheets/components/_search.scss
+++ b/css/sass/stylesheets/components/_search.scss
@@ -82,42 +82,100 @@ font-family:$IntroLight;
 }
 
 
-.min-nav-search  {
-
-  #label {
+.mini-cse-search {
+  // position: absolute;
+  position: relative;
+  margin-top: 10px;
+  width: 0%;
+  min-width: 60px;
+  height: 60px;
+  float: right;
+  overflow: hidden;
+  -webkit-transition: width 0.3s;
+  -moz-transition: width 0.3s;
+  transition: width 0.3s;
+ -webkit-backface-visibility: hidden;
+#label {
+  color: #fff;
+  background: #e67e22;
+  z-index: 90;
+  font-size:64px;
+  position:relative;
+}
+#label label, .gsc-search-button input {
+  // background: url("../../img/search-icon.png") 0 0 no-repeat; 
+  width: 60px;
+  height: 60px;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 0;
+  margin: 0;
+  line-height: 60px;
+  text-align: center;
+  cursor: pointer;
+}
+.gsc-search-button {
     width: 60px;
     height: 60px;
     position: relative;
-    z-index: 20;
+    z-index: 1; 
+    margin:0;
+    margin-left:0 !important;
+  }
+
+td.gsc-input { 
+// background-color:green;
+  input {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  outline: none;
+  background: #fff;
+  height: 60px;
+  margin: 0;
+  width:100%;
+  z-index: -1;
+  padding: 10px;
+  font-family: inherit;
+  font-size: 20px;
+  color: #2c3e50;
+  }
+
 }
-#label label {
-    display: block;
-    width: 60px;
-    height: 60px;
-    background: url("../../img/search-icon.png") 0 0;
-    font-size: 0;
-    color: rgba(0, 0, 0, 0);
-    text-indent: -9999px;
-    cursor: pointer;
-}
-#label label:hover {
-    background: url("../../img/search-icon.png") -60px 0
-}
-#label.active label {
-    background: url("../../img/search-icon.png") -60px 0
-}
-form.gsc-search-box { 
-td.gsc-input {
-    position: absolute;
-    top: 0; 
-    left: 60px;
-    width: 450px;
-    height: 60px;
-    z-index: 5;
-    overflow: hidden;
-}
+  td.gsc-input.focus {
+    input {
+      background: #da6d0d;
+      color: #333;
+      z-index: 11;
+      width: 100%;
+      padding:0;
+    }
+    input {
+      outline: none;
+      left: 0px;
+      transition: left 0.3s ease;
+      width: 100%;
+    }
+  }
+  #searchForm {
+    z-index: -1;
+    position:relative;
+  }
+
 }
 
- 
-
+.mini-cse-search.search-open {
+  width:40%;
+  #searchForm {
+    z-index: 10;
+  }
+  .gsc-search-button {
+    z-index: 11;
+  } 
+  #label {
+    z-index:1;
+  }
 }
